Fix avatar upload storage path
# Conflicts:
#	backend/src/test/java/com/example/social/FileServiceTest.java